[package]
name = "misile_lib"
version = "0.1.0"
description = "Library for misilelab's projects"
repository = "https://github.com/misilelab/MisileLib"
authors = ["MisileLaboratory"]
readme = "README.md"
license-file = "LICENSE.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { version = "1.0.81", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
config = ["dep:serde", "dep:serde_json"]