[tool.poetry]
name = "misilelib-python"
version = "0.1.0"
description = "MisileLib-Python"
authors = ["MisileLaboratory"]
license = "MisileLab License"
readme = "README.md"
packages = [{include = "misilelib_python"}]

[tool.poetry.dependencies]
python = "3.10.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
