[tool.poetry]
name = "misilelibpy"
version = "0.1.0"
description = "MisileLib-Python"
authors = ["MisileLaboratory"]
license = "MisileLab License"
readme = "README.md"
packages = [{ include = "misilelibpy" }]

[tool.poetry.dependencies]
python = "3.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
